public class Barco extends MedioTransporte {
    public String color;
    public String tipoMotor;
}
