@startuml
abstract class Transporte {
- float latitud
- float longitud
+ void setLongitud(float)
+ float getLongitud()
+ void setLatitud(float)
+ float getLatitud()
+ {abstract}void trasladar(float,float)
}


class Automovil {
- int cantidadRuedas
- String color
+ void tocarBocina()
+ void trasladar(float,float)
}


class Avion {
- Boolean disponibilidad
+ Boolean getDisponibilidad()
+ void setDisponibilidad(Boolean)
}


class MedioTransporte {
- String nombre
- String medio
+ void trasladar(float,float)
}


class Main {
+ {static} void main(String[])
}

class Barco {
+ String color
+ String tipoMotor
}

class Bicicleta {
- int cantidadRuedas
+ int getCantidadRuedas()
+ void setCantidadRuedas(int)
}


MedioTransporte <|-- Automovil
MedioTransporte <|-- Avion
Transporte <|-- MedioTransporte
MedioTransporte <|-- Barco
MedioTransporte <|-- Bicicleta
@enduml